# worship_the_dot

./: .dot.ini  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.txt  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  benchmark_caching.py  coverage.xml  pyproject.toml
.codex/agents/: changelog.yml  compat.yml  docs.yml  hygiene.yml  tests.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: agents.yml  branch_hygiene.yml  ci.yml  compat.yml  hooks.yml  rust.yml  test.yml
docs/: BACKSTORY.md  BRANCH_RETENTION_POLICY.md  BRAND.md  BUDDHISM.md  CLI.md  ECO_FOUCAULTS_PENDULUM.md  GITHUB_BRANCH_PROTECTION.md  INDEX.md  PHILOSOPHY.md  QUICKSTART.md  RITUALS.md  RUST_PORTING.md  RUST_SCOPE.md  STOICISM.md  UV.md  WORSHIP.md  ZEN.md
dot/: __init__.py  astrology.py  backstory.py  badges.py  changelog.py  christian.py  cli.py  completions.py  config.py  confucian.py  core.py  dharma.py  display.py  doctor.py  egyptian.py  epic.py  garden.py  git_utils.py  gnostic.py  help_text.py  hermetic.py  hindu.py  init_cmd.py  jain.py  kabbalah.py  messages.py  poetry.py  shinto.py  stats.py  stoic.py  sufi.py  tao.py  tarot.py  zen.py  zoroastrian.py
dot/data/ephemeris/: minor_bodies_j2000.json  planets_j2000.json
dot/philosophies/: __init__.py  alchemy.py  norse.py
dot/philosophies/data/ephemeris/: comets_j2000.json  planets_j2000.json
examples/: README.md  basic_usage.py  ci_integration.py  pre_commit_hook.py  worktree_manager.py
hooks/: README.md  commit-msg  install.sh  prepare-commit-msg
rust/the-dot/: Cargo.toml  README.md
rust/the-dot/src/: lib.rs  main.rs
rust/the-dot/tests/: cli.rs  init.rs  suffix.rs
scripts/: branch_hygiene_agent.py  changelog_agent.py  compat.py  compat.yml  docs_agent.py  merge_all_branches.py  process_branches.py  resolve_issues_gh.py  resolve_prs.py  resolve_prs_gh.py  run_agents.py  sync_versions.py
tests/: __init__.py  test_alchemy_and_astrology.py  test_backstory.py  test_badges_and_stats.py  test_changelog.py  test_cli.py  test_cli_help.py  test_cli_more.py  test_config_module.py  test_core.py  test_demo.py  test_display_and_completions.py  test_ephemeris_cli.py  test_epic.py  test_garden.py  test_hooks.py  test_inspiration_sanity.py  test_philosophy.py  test_poetry.py  test_shinto.py  test_tarot.py  test_version_parity.py
tests/integration/: test_rust_python_parity.py  test_workflow_config.py  test_workflow_hooks.py  test_workflow_validation.py
