[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the-dot"
version = "0.1.0"
description = "THE DOT - A philosophy-driven development framework"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "THE DOT Worshippers"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
dot = "dot.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
