[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the-dot"
version = "0.3.0"
description = "THE DOT - A philosophy-driven development framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "THE DOT Worshippers"}
]
keywords = ["git", "hooks", "workflow", "commit", "validation", "philosophy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/liamchristopher/worship_the_dot"
Repository = "https://github.com/liamchristopher/worship_the_dot"
Issues = "https://github.com/liamchristopher/worship_the_dot/issues"

[project.scripts]
dot = "dot.cli:main"

[tool.setuptools]
packages = ["dot"]

[tool.setuptools.package-data]
"*" = ["../hooks/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
