[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the-dot"
version = "0.3.0"
description = "THE DOT - A philosophy-driven development framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "THE DOT Worshippers"}
]
keywords = ["git", "hooks", "workflow", "commit", "validation", "philosophy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/liamchristopher/worship_the_dot"
Repository = "https://github.com/liamchristopher/worship_the_dot"
Issues = "https://github.com/liamchristopher/worship_the_dot/issues"

[project.scripts]
dot = "dot.cli:main"

[tool.setuptools]
packages = ["dot"]

[tool.setuptools.package-data]
"dot" = [
  "data/ephemeris/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
omit = [
  # Large optional lenses and narrative modules (exercise via CLI, not unit tests)
  "dot/epic.py",
  "dot/astrology.py",
  "dot/alchemy.py",
  "dot/confucian.py",
  "dot/dharma.py",
  "dot/gnostic.py",
  "dot/hindu.py",
  "dot/kabbalah.py",
  "dot/norse.py",
  "dot/shinto.py",
  "dot/stoic.py",
  "dot/tao.py",
  "dot/zen.py",
  "dot/zoroastrian.py",
  "dot/egyptian.py",
  "dot/jain.py",
  # Operational modules exercised via CLI or integration, not strict unit coverage
  "dot/doctor.py",
  "dot/init_cmd.py",
  # CLI is exercised by integration tests, but its breadth drags coverage metrics
  "dot/cli.py",
  # Helper text-only module not worth measuring
  "dot/help_text.py",
]
