[package]
name = "the-dot"
version = "0.1.0"
edition = "2021"
description = "THE DOT — a philosophy-driven development tool (Rust version)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/liamchristopher/worship_the_dot"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
ini = "0.21"
once_cell = "1.19"
dirs-next = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
