[package]
name = "the-dot"
version = "0.3.0"
edition = "2021"
description = "THE DOT — a philosophy-driven development tool (Rust version)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/liamchristopher/worship_the_dot"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
once_cell = "1.19"
dirs-next = "2.0"

[[bin]]
name = "dot"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"
